references for front-end to back-end object fixed. Data now shows from back-end. Created round class and styled scrollbar with CSS.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,19 @@ a:hover {
   color: var(--highlight-color)
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .button {
   background-color: var(--highlight-color);
   color: black;
@@ -64,6 +77,12 @@ a:hover {
 /***********************************************/
 /* Sync ****************************************/
 
+.round {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+}
+
 .sync-title {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
@@ -82,9 +101,10 @@ a:hover {
 .idea-text {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 90%;
-  padding: 0.5em;
-  /* The following cuts the text off if too long for container: */
-  height: 10em;
+  width: 100%;
+  height: 8em;
+  margin: 1em;
+  /* The following cuts the text off (vertically) if too long: */
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -96,7 +116,7 @@ a:hover {
   margin: 0;
 }
 
-.decision-pair {
+.decision-pair-item {
   background-color: var(--dark-gray);
   border-radius: 0.3em;
   margin: 0.2em;
